--- a/dcpquery/ui/index.html
+++ b/dcpquery/ui/index.html
@@ -100,12 +100,10 @@
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
             <div class="card-body">
-              <textarea width="100%" height="100%" id="cm-viewer-{{loop.index}}" onload="console.dir('x');">
-                {{ query }}
-              </textarea>
-
+              <textarea width="100%" height="100%" id="cm-viewer-{{loop.index}}" onload="console.dir('x');">{{ query }}</textarea>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Copy</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#queryEditorModal">Edit</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">▶️Run</button>
                 </div>
