--- a/dcpquery/ui/index.html
+++ b/dcpquery/ui/index.html
@@ -152,7 +152,7 @@
     <p class="float-right">
       <a href="#">Back to top</a>
     </p>
-    <p>Human Cell Atlas DCP Query Service</p>
+    <p>Human Cell Atlas DCP Query Service {{env["VERSION"]}}</p>
   </div>
 </footer>
 </html>
