UI: Escape all occurrences of single quote, not just the first
Fixup for 4b83d9fa2efefcc349fe2ecb942ed452f764e34e

--- a/dcpquery/ui/index.html
+++ b/dcpquery/ui/index.html
@@ -108,10 +108,10 @@
     $('#copy-ack-text').text(text);
   }
   function prepareCLISnippet(text) {
-    return "hca query post-query --query=$'" + text.replace("'", "\\'") + "'";
+    return "hca query post-query --query=$'" + text.replace(/'/g, "\\'") + "'";
   }
   function prepareAPISnippet(text) {
-    return "http https://{{env["API_DOMAIN_NAME"]}}/v1/query query=$'" + text.replace("'", "\\'") + "'";
+    return "http https://{{env["API_DOMAIN_NAME"]}}/v1/query query=$'" + text.replace(/'/g, "\\'") + "'";
   }
   function configureModalEditor(text) {
     document.editor.setValue(text);
