--- a/dcpquery/ui/index.html
+++ b/dcpquery/ui/index.html
@@ -42,6 +42,11 @@
     footer p {
       margin-bottom: .25rem;
     }
+
+    .dataTable td {
+      max-width: 25rem;
+      overflow: hidden;
+    }
   </style>
 
   <title>Human Cell Atlas DCP Query Service</title>
@@ -59,6 +64,12 @@
     return new Request(route, {method: "POST",
       headers: {"Content-Type": "application/json"},
       body: JSON.stringify(body)});
+  }
+  function renderCell(data, type, row) {
+    if (typeof data === "object") {
+      return "<pre>" + JSON.stringify(data, null, 2) + "</pre>";
+    }
+    return data;
   }
   function dispatchQuery(query, params) {
     $('#query-result').DataTable().clear().destroy();
@@ -82,7 +93,7 @@
       } else {
         $('#query-error').hide();
         if (results["results"].length > 0) {
-          var columns = Object.keys(results["results"][0]).map(i => ({title: i, data: i}));
+          var columns = Object.keys(results["results"][0]).map(i => ({title: i, data: i, render: renderCell}));
           $('#query-result').empty();
           $('#query-result').DataTable({data: results["results"], columns: columns});
         } else {
