--- a/dcpquery/ui/index.html
+++ b/dcpquery/ui/index.html
@@ -141,7 +141,7 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
           <ul class="list-unstyled">
-            <li><a href="https://join-hca-slack.herokuapp.com/" class="text-white">HCA Slack</a></li>
+            <li><a href="https://join-hca-slack.data.humancellatlas.org/" class="text-white">HCA Slack</a></li>
             <li><a href="mailto:query-service-team@data.humancellatlas.org" class="text-white">Email team</a></li>
           </ul>
         </div>
