--- a/dcpquery/ui/index.html
+++ b/dcpquery/ui/index.html
@@ -136,7 +136,9 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <p class="text-muted">The HCA DCP Query Service provides an interface for scientists and developers to query metadata associated with experimental and analysis data stored in the <a href="https://humancellatlas.org/">Human Cell Atlas</a> <a href="https://www.humancellatlas.org/data-sharing">Data Coordination Platform</a> (DCP). Metadata from the <a href="https://github.com/HumanCellAtlas/data-store">DCP Data Store</a> are indexed and stored in an <a href="https://aws.amazon.com/rds/aurora/">AWS Aurora</a> <a href="https://www.postgresql.org/">PostgreSQL</a> database.</p>
+          <p class="text-muted">
+            The HCA DCP Query Service provides an interface for scientists and developers to query metadata associated with experimental and analysis data stored in the <a href="https://humancellatlas.org/">Human Cell Atlas</a> <a href="https://www.humancellatlas.org/data-sharing">Data Coordination Platform</a> (DCP). Metadata from the <a href="https://github.com/HumanCellAtlas/data-store">DCP Data Store</a> are indexed and stored in an <a href="https://aws.amazon.com/rds/aurora/">AWS Aurora</a> <a href="https://www.postgresql.org/">PostgreSQL</a> database.
+          </p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
@@ -166,9 +168,12 @@
     <div class="container">
       <h1 class="jumbotron-heading">Sample Queries</h1>
       <p class="lead text-muted">
-        The DCP Query service allows relational querying of HCA metadata over a RESTful HTTP API.
+        The DCP Query Service allows relational querying of HCA metadata over a RESTful HTTP API.
         The examples below are starting points for data exploration and programmatic access.
         Each example can be opened, edited, run in the browser to display the results in a table view, or copied as an HCA CLI command or API request.
+      </p>
+      <p class="text-muted">
+        To get in touch with the DCP Query Service team, join the <code>#query-service</code> channel on the <a href="https://join-hca-slack.data.humancellatlas.org/">HCA Slack</a>.
       </p>
       <p>
         <a href="#" class="btn btn-primary my-2" data-toggle="modal" data-target="#queryEditorModal">Open query editor</a>
